<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeiro_numero"
        android:id="@+id/textView"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo_numero"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgp"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:checkedButton="@+id/somar">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soma"
            android:id="@+id/somar"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="42dp"
            android:checked="false" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtrcao"
        android:id="@+id/subtrair"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/somar"
        android:layout_alignStart="@+id/somar" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicacao"
        android:id="@+id/multiplicar"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignLeft="@+id/subtrair"
        android:layout_alignStart="@+id/subtrair" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divisao"
        android:id="@+id/dividir"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/multiplicar"
        android:layout_alignStart="@+id/multiplicar" />

    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_alignRight="@+id/radioButton"
        android:layout_alignEnd="@+id/radioButton"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="29dp" />
</RelativeLayout>
